Bug 1520584 part 1 - [css-align][css-grid] Translate the static position to grid area coordinates.  r=dholbert